correcting pokemon button Ids first character from Number to String

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
     <div class="sprite-container">
       {{! TODO Display list of Pokemon here. }}
       {{#each pokemon}}
-      <button class="buttons" id="{{this.dexNumber}}">
+      <button class="buttons" id="ID-{{this.dexNumber}}">
         <img src="{{this.smallImageUrl}}">
         <span>{{this.name}}</span>
       </button>
