create test to return No dexEntry Available where pokemon dexEntry does not exist (pokemon 1009)

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,7 +7,7 @@
 
     <p>The below are a list of the original 151 pokemon - to add other pokemon please enter the pokemon's dex number here:</p>
     <form method="GET" action="./dexSearch">
-      <input type="number" name="newPokemonDex" min="1" max="1010">
+      <input type="number" name="newPokemonDex" min="1" max="1010" id="searchEntry">
       <button type="submit">Submit</button>
     </form>
     <p><em>Note - a full list of all pokemon and their dex numbers can be accessed <a
