updating image alt message

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,7 +28,7 @@
     <div class="details" id="detailsContainer">
       <h1>Details</h1>
       {{! TODO Display info about a single Pokemon here. }}
-      <img src="{{openingPokemonImage}}" alt="Unfortunately no image is available for {{openingPokemonName}}">
+      <img src="{{openingPokemonImage}}" alt="Unfortunately there is no image is available for {{openingPokemonName}}">
       <h1>#{{openingPokemonNumber}} {{openingPokemonName}}</h1>
       <p><strong>Types:</strong> {{openingPokemonTypes}}</p>
       <p><strong>About {{openingPokemonName}}:</strong> {{openingPokemonAbout}}</p>
